# qdb-dask-connector

./: .gitignore  .gitmodules  README.md  dev-requirements.txt  dev_requirements.txt  pyproject.toml  test.py
.github/workflows/: lint.yml
.ruler/: 10-introduction.md  20-python-guidelines.md  21-pybind11-guidelines.md  30-project-structure.md  40-code-guidelines.md  ruler.toml
qdb_dask_connector/: __init__.py  client_side.py  server_side.py
quasardb_dask/: __init__.py  client_side.py  server_side.py
scripts/github_actions/: requirements.txt
scripts/teamcity/: 10.test.sh
tests/: conftest.py  test_dask_integration.py  test_data_equals_pandas.py  test_data_integrity.py  test_rest_api_client_mode.py  test_write_dataframe.py  utils.py
