[project]
requires-python = ">=3.12"
name = "qdb-dask-connector"
version = "0.1-dev"
authors = [
    {name = "quasardb SAS"},
    {email="contact@quasardb.net" },
]
description = "Integration between QuasarDB's Python API and Dask DataFrame"
dependencies = [
    "dask[complete]",
    "pandas",
    "dateparser",
    "pandas"
]

[project.optional-dependencies]
python = ["quasardb"]

[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"qdb_dask_connector" = "qdb_dask_connector/"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.py?$'
required-version = '24'
