[project]
requires-python = ">=3.11"
name = "quasardb-dask"
version = "3.14.3.dev0"
authors = [
    {name = "quasardb SAS"},
    {email="contact@quasardb.net" },
]
description = "Integration between QuasarDB's Python API and Dask DataFrame"
dependencies = [
    "dask[complete]",
    "pandas",
    "svix-ksuid",
    "pendulum",
]

[project.optional-dependencies]
python = ["quasardb"]

[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["quasardb_dask"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.py?$'
required-version = '24'
